Details
-
Bug
-
Resolution: Fixed
-
Critical
-
VirtualBox
Description
Problem can be reproduced with other applications, such as AoE I with installed AC97 drivers. Starting it for the second time leads to bug check
As always, current trunk (now 70400)
(../../win32ss/user/ntuser/msgqueue.c:1268) err: MsqSendMessage timed out 2 Status 102
|
err:(../../win32ss/user/user32/windows/cursoricon.c:1872) Invalid handle? Module='d:\AOE\EMPIRESX.EXE', error 126.
|
(../../win32ss/user/ntuser/winpos.c:727) err: Parent is Desktop, Min off screen!
|
(../../win32ss/gdi/eng/pdevobj.c:468) PDEVOBJ_bSwitchMode, ppdev = E149B008, pSurface = E1669DF8
|
(../../win32ss/gdi/eng/pdevobj.c:521) leave, ppdev = E149B008, pSurface = E15E82E8
|
(../../ntoskrnl/mm/ARM3/virtual.c:5253) Attempt to free section memory
|
(../../drivers/wdm/audio/backpln/portcls/pin_wavecyclic.cpp:1228) CPortPinWaveCyclic::Init Status 0 PinId 0 Capture 0
|
(../../drivers/wdm/audio/backpln/portcls/pin_wavecyclic.cpp:1304) Bits 16 Samples 44100 Channels 2 Tag 1 FrameSize 1764 CommonBufferSize 7056, CommonBuffer F6BB6000
|
err:(../../dll/opengl/opengl32/wgl.c:741) Error: hdc is not a DC handle!
|
(../../drivers/wdm/audio/legacy/wdmaud/control.c:161) Closing device 800005D4
|
(../../drivers/wdm/audio/backpln/portcls/pin_wavecyclic.cpp:1228) CPortPinWaveCyclic::Init Status c0000272 PinId 0 Capture 0
|
(../../drivers/wdm/audio/backpln/portcls/pin_wavecyclic.cpp:1228) CPortPinWaveCyclic::Init Status c0000272 PinId 0 Capture 0
|
|
|
Entered debugger on last-chance exception (Exception Code: 0xc0000005) (Page Fault)
|
Memory at 0x00000010 could not be read: Page not present.
|
kdb:> bt
|
Eip:
|
<wdmaud.sys:2f6a (drivers/wdm/audio/legacy/wdmaud/mmixer.c:343 (EventCallback))>
|
Frames:
|
<wdmaud.sys:81c1 (lib/drivers/sound/mmixer/sup.c:358 (MMixerNotifyControlChange))>
|
<wdmaud.sys:8cb1 (lib/drivers/sound/mmixer/sup.c:730 (MMixerSetGetVolumeControlDetails))>
|
<wdmaud.sys:5b9c (lib/drivers/sound/mmixer/mixer.c:520 (MMixerSetControlDetails))>
|
<wdmaud.sys:371a (drivers/wdm/audio/legacy/wdmaud/mmixer.c:550 (WdmAudSetControlDetails))>
|
<wdmaud.sys:1a97 (drivers/wdm/audio/legacy/wdmaud/control.c:362 (WdmAudDeviceControl))>
|
<NTOSKRNL.EXE:6c51b (ntoskrnl/io/iomgr/irp.c:1221 (IofCallDriver))>
|
<NTOSKRNL.EXE:64085 (ntoskrnl/io/iomgr/iofunc.c:136 (IopPerformSynchronousRequest))>
|
<NTOSKRNL.EXE:64af0 (ntoskrnl/io/iomgr/iofunc.c:612 (IopDeviceFsIoControl))>
|
<NTOSKRNL.EXE:657d1 (ntoskrnl/io/iomgr/iofunc.c:1277 (NtDeviceIoControlFile))>
|
<NTOSKRNL.EXE:1260d4 (ntoskrnl/include/internal/i386/ke.h:706 (KiSystemServiceHandler))>
|
<NTOSKRNL.EXE:3da5 (:0 (KiFastCallEntry))>
|
<ntdll.dll:c7ed>
|
<wdmaud.drv:5fc5>
|
<wdmaud.drv:48b7>
|
<wdmaud.drv:4b7f>
|
<wdmaud.drv:4d07>
|
<winmm.dll:3c34>
|
<winmm.dll:111a0>
|
<EMPIRESX.EXE:a3f93>
|
Attachments
Issue Links
- is duplicated by
-
CORE-12628 BSoD on wdmaud.sys (Sound settings related)
-
- Resolved
-