[WDMAUD] Close mixers on cleanup. CORE-10735